 cnp-pci-dss-1.3.3-egress-bjxbry9.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-egress-a71truz
  namespace: kube-system
spec:
  description: "This policy will allow outbound connection using kube-dns in port 53"
  endpointSelector:
    matchLabels:
      k8s-app: cilium
      pod-template-generation: 1
      controller-revision-hash: 7b445dc7b4
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
